--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ pytest = "^8.3.3"
 uvicorn = "^0.32.0"
 asyncpg = "^0.30.0"
 gunicorn = "^23.0.0"
+python-multipart = "^0.0.18"
 
 
 [build-system]
