--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ uvicorn = "^0.32.0"
 asyncpg = "^0.30.0"
 gunicorn = "^23.0.0"
 python-multipart = "^0.0.18"
+aiobotocore = "^2.15.2"
 
 
 [build-system]
