--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ asyncpg = "^0.30.0"
 gunicorn = "^23.0.0"
 python-multipart = "^0.0.18"
 aiobotocore = "^2.15.2"
+pillow = "^11.0.0"
 
 
 [build-system]
