--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -27,3 +27,18 @@ jobs:
             run: |
               docker stop api
               docker rm api
+    ruff:
+        runs-on: ubuntu-latest
+        steps:
+          - name: Set up python
+            uses: actions/setup-python@v3
+            with:
+              python-version: '3.12'
+
+          - name: install ruff
+            run: |
+              python -m pip install --upgrade pip
+              pip install ruff 
+
+          - name: Ruff check
+            run: ruff check .
