--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,9 @@ gunicorn = "^23.0.0"
 python-multipart = "^0.0.18"
 aiobotocore = "^2.15.2"
 pillow = "^11.0.0"
+pytest-asyncio = "^0.24.0"
+httpx = "^0.28.0"
+pytest-sugar = "^1.0.0"
 
 
 [build-system]
