--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -42,3 +42,22 @@ jobs:
 
           - name: Ruff check
             run: ruff check .
+    
+    tests:
+      runs-on: ubuntu-latest
+      env:
+        MODE: TEST
+      steps:
+        - name: set up Python
+          uses: actions/setup-python@v4
+          with:
+            python-version: 3.12
+
+        - name: install pytest
+          run: |
+              python -m pip install --upgrade pip
+              pip install pytest
+
+        - name: Run Pytest
+          run: |
+              pytest --maxfail=1 --disable-warnings
