--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -60,4 +60,4 @@ jobs:
 
         - name: Run Pytest
           run: |
-              pytest tests/ --maxfail=1 --disable-warnings
+              pytest ./tests/ --maxfail=1 --disable-warnings
