--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -48,6 +48,9 @@ jobs:
       env:
         MODE: TEST
       steps:
+        - name: checkout
+          uses: actions/checkout@v3
+
         - name: set up Python
           uses: actions/setup-python@v4
           with:
@@ -60,4 +63,4 @@ jobs:
 
         - name: Run Pytest
           run: |
-              pytest ./tests/ --maxfail=1 --disable-warnings
+              pytest tests/ --maxfail=1 --disable-warnings
