--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -59,7 +59,8 @@ jobs:
         - name: install pytest
           run: |
               python -m pip install --upgrade pip
-              pip install pytest
+              pip install poetry
+              poetry install
 
         - name: Run Pytest
           run: |
