--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -56,11 +56,12 @@ jobs:
           with:
             python-version: 3.12
 
-        - name: install pytest
+        - name: install dependencies
           run: |
               python -m pip install --upgrade pip
               pip install poetry
               poetry install
+              poetry add pytest
 
         - name: Run Pytest
           run: |
