--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -65,4 +65,4 @@ jobs:
 
         - name: Run Pytest
           run: |
-              run -m pytest  -v -s --maxfail=1 --disable-warnings
+            pytest  -v -s --maxfail=1 --disable-warnings
